* Fixed layout of DateRangeInput component on small screens

--- a/src/view/Components/DateRangeInput/DateRangeInput.scss
+++ b/src/view/Components/DateRangeInput/DateRangeInput.scss
@@ -1,4 +1,15 @@
 .date-range-filter {
+  .input-group {
+    --ig-hor-padding: 0.5rem;
+
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+  }
+
+  .input-group__text {
+    min-width: auto;
+  }
+
   .btn.input-group__inner-btn {
     --btn-icon-size: 14px;
     --btn-icon-color: var(--ig-inner-button-color);
@@ -11,6 +22,16 @@
   }
 
   .date-range-part {
-    min-width: 120px;
+    --input-padding: 0 0.2rem 0 0.5rem;
+
+    min-width: 0;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .date-range-filter {
+    .date-range-part {
+      --input-padding: 0 0.5rem;
+    }
   }
 }
